# redshift-scheduler

./: LICENSE  README.md  meson.build
data/: redshift-scheduler.cmb  redshift-scheduler.css  redshift-scheduler.ui
src/: main.cpp
